<resources>
    <string name="app_name">Appointment</string>
    <string name="add_new_appointment">Add New Appointment</string>
    <string name="appointment_type">Appointment Type</string>
    <string name="check_up">Check-up</string>
    <string name="emergency">Emergency</string>
    <string name="follow_up">Follow-up</string>
    <string name="routine">Routine</string>
    <string name="walk_in">Walk-in</string>
    <string name="priority">Priority</string>
    <string name="duration">Duration</string>
    <string name="add_participants">Add Participant</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="list_all">List All</string>
    <string name="add_new">Add New</string>
    <string name="appointments">Appointments</string>
    <string name="item_placeholder">placeholder</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_description">Add description</string>
    <string name="date_placeholder">Date</string>

    <string-array name="appointment_statuses">
        <item>Proposed</item>
        <item>Pending</item>
        <item>Booked</item>
        <item>Arrived</item>
        <item>Fulfilled</item>
        <item>Cancelled</item>
        <item>No-Show</item>
        <item>Entered-In-Error</item>
        <item>Checked-In</item>
        <item>Wait-List</item>
    </string-array>

    <string-array name="appointment_types">
        <item>Check-Up</item>
        <item>Emergency</item>
        <item>Follow-Up</item>
        <item>Routine</item>
        <item>Walk-In</item>
    </string-array>

    <string-array name="participant_statuses">
        <item>Accepted</item>
        <item>Declined</item>
        <item>Tentative</item>
        <item>Needs-Action</item>
    </string-array>

    <string-array name="participant_actors">
        <item>Patient</item>
        <item>Practitioner</item>
        <item>Practitioner-Role</item>
        <item>Related-Person</item>
        <item>Device</item>
        <item>Healthcare-Service</item>
        <item>Location</item>
    </string-array>

    <string-array name="participant_required">
        <item>Required</item>
        <item>Optional</item>
        <item>Information-Only</item>
    </string-array>
</resources>