<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAppointmentActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/appointments"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="70dp" >

            <TextView
                android:id="@+id/textViewAddNewAppointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_appointment" />

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textViewAppointmentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment_type" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonCheckUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_up" />

                <RadioButton
                    android:id="@+id/radioButtonEmergency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emergency" />

                <RadioButton
                    android:id="@+id/radioButtonFollowUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_up" />

                <RadioButton
                    android:id="@+id/radioButtonRoutine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/routine" />

                <RadioButton
                    android:id="@+id/radioButtonWalkIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/walk_in" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority" />

            <SeekBar
                android:id="@+id/seekBarPriority"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="3" />

            <TextView
                android:id="@+id/textViewDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration" />

            <SeekBar
                android:id="@+id/seekBarDuration"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="3" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints="" />

            <Button
                android:id="@+id/buttonAddParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_participants"
                android:onClick="onAddParticipants" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:scrollbars="vertical"
                />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:autofillHints="" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:onClick="onSubmit" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:onClick="onBack" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>