<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/buttonListAll"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:text="@string/list_all"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddNew"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onListAll" />

    <Button
        android:id="@+id/buttonAddNew"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:text="@string/add_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onAddNew" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/appointments"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="388dp"
        android:layout_height="773dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>